# NETSPY

./: CONTRIBUTING.md  README.md  app.py  cli.py  gitignore  pyproject.toml  requirements.txt
netspy_pkg/: __init__.py  app.py  capture.py
templates/: dashboard.html
