[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netspy"
version = "1.0.0"
description = "Network packet sniffer and live traffic visualizer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kazim-45"}
]
dependencies = [
    "scapy>=2.5.0",
    "flask>=2.3.0",
    "rich>=13.0.0",
]

[project.scripts]
netspy = "netspy_pkg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netspy_pkg*"]

[tool.setuptools.package-data]
netspy_pkg = ["../templates/*"]
